# StockVision

./: .gitignore  ARCHITECTURE.md  Backend.md  Dashboard  LICENSE  MULTI_PORTFOLIO_FEATURE.md  README.md  SECURITY.md  banner.js  contributing.md  package-lock.json  package.json  turbo.json
.github/workflows/: monorepo-production-tests.yml  pr-create-automate-message.yml
.turbo/cache/: 588e3fe13db7eb5b-meta.json  588e3fe13db7eb5b.tar.zst  de612ec379145aa7-meta.json
.turbo/daemon/: 8783c342a6f6f30d-turbo.log.2025-08-23  89dd80e6ba41b15a-turbo.log.2025-08-27  89dd80e6ba41b15a-turbo.log.2025-08-28  a450ae38194c2f8d-turbo.log.2025-08-29  ad84a52ed504153f-turbo.log.2025-07-27  d743fe4ced1596e4-turbo.log.2025-08-17
app/: layout.tsx
app/components/: NotFound.tsx  stock-chart.tsx  stock-ticker.tsx
app/components/ui/: badge.tsx  form.tsx
app/dashboard/: page.tsx
app/hooks/: use-toast.ts
app/styles/: x Theme.css
backend/: README.md  env.example  init_chat_db.py  integration_test.py  main.py  package.json  pyproject.toml  quick_test.py  requirements.txt  simple_test.py  start_server.py  stockvision.db  stockvision_dev.db  test_backend_focused.py  test_optimizations.py  test_portfolios.py  test_server.py
backend/app/: __init__.py  chat_models.py  db.py  models.py  user_models.py
backend/app/routers/: __init__.py  auth.py  chatbot.py  market.py  portfolios.py  screener.py  stocks.py
backend/app/services/: ai_services.py  chat_database.py  stock_service.py
frontend/: .env.local  .env.local.example  .gitignore  AUTH_SETUP.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_FIXES_SUMMARY.md  env-local-example  eslint.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .rscinfo  .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/app/: HomeClient.tsx  layout-auth.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/app/components/: AuthShowcase.tsx  DashboardPage.tsx  Index.tsx  Landing.tsx  MouseFollower.tsx  Preloder.tsx  Providers.tsx  Testimonials.tsx  dashboard.tsx  floating-chatbot.tsx  market-data-center.tsx  multi-portfolio-section.tsx  navbar.tsx  performance-section.tsx  portfolio-comparison.tsx  portfolio-section.tsx  portfolio-selector.tsx  screener.tsx  sidebar.tsx  stock-card.tsx  stock-chart.tsx  stock-ticker.tsx  theme-provider-utils.ts  theme-toggle.tsx  (+2 more)
frontend/components/: ai-chatbot.tsx
frontend/lib/: api-config.ts  error-handling.tsx
frontend/pages/: _app.tsx
frontend/prisma/: dev.db  schema.dev.prisma  schema.prisma
frontend/types/: next-auth.d.ts
prisma/: schema.prisma
(+170 files in other folders)
